app/assets/stylesheets/components/_pro_form.scss
.form-control {
line-height: 1.5;
background-color: #403b3b;
border: 1px solid #a5a5a7;
color: white;
}

.container {
  margin-top: 100px;
}

.booking-wrapper {
  width: 70%;
  border-radius: 8px;
  background-color: #383535bf;
  color: white;
}

.form-control::-webkit-input-placeholder {
 color: gray;
  }

.form-group {
  padding: 30px;
  margin-bottom: 0;

  h1 {
 border-bottom: 1px solid #0000005c;
 font-size: 20px;
 margin-top: 20px;
 margin-bottom: 20px;
 padding-bottom: 4px;
}
}

.btn {
  margin-top: 30px;
  margin: auto;
  display:block;
}
.btn-space {
  margin-top: 30px;
}

#tab-select {
  background-color: #403b3b;
  &:focus {
  outline:none !important;
   outline-width: 0 !important;
   box-shadow: none !important;
   -moz-box-shadow: none !important;
   -webkit-box-shadow: none !important;
   border-color: #a5a5a7;
   color: white;
  }
}

#tab-message {
  background-color: #403b3b;
  &:focus {
  outline:none !important;
   outline-width: 0 !important;
   box-shadow: none !important;
   -moz-box-shadow: none !important;
   -webkit-box-shadow: none !important;
   border-color: #a5a5a7;
   color: white;
}
}

